tests/fixtures/invalid/bytes_sub_none.py
# Cannot subtract Bytes and None
x: bytes = b"hello" - None
